# CSJVisualScene

./: .gitignore  CMakeLists.txt  README.md  vscode_config.7z
CSJGLRender/: CSJGLProgram.cpp  CSJGLProgram.h  CSJGLSceneBase.cpp  CSJGLSceneBase.h
CSJGLRender/CSJGLPresetScenes/: CSJGLShadowScene.cpp  CSJGLShadowScene.h
CSJSceneEditor/: CSJSceneEditorWindow.cpp  CSJSceneEditorWindow.h  CSJWrapperWidget.cc  CSJWrapperWidget.h
CSJSceneRuntime/: CSJSceneEngine.h  CSJSceneEngineWindow.h  CSJSceneRuntimeData.cc
CSJSceneRuntime/ResourceManager/: CSJAssetManager.cc  CSJAssetManager.h  CSJModelImporter.h
CSJSceneRuntime/function/framework/Object/: CSJObject.h  CSJObjectIDAlloc.cc
CSJSceneRuntime/function/framework/WorldManager/: CSJGameLevel.h  CSJWorldManager.h
CSJSceneRuntime/function/framework/render/: CSJRenderGuidManager.h  CSJRenderObjectData.h
Documents/: Progress.md
UIModules/: CSJGLRenderWidget.cpp  CSJGLRenderWidget.h  CSJSceneRenderWindow.cpp  CSJSceneRenderWindow.h
main/: main.cpp  mainwindow.cpp  mainwindow.h
render/: CSJAssetManager.h  CSJModelImporter.cpp  CSJRenderObjectData.cc  CSJRenderObjectData.h
resources/shaders/: compile.bat  shader.frag  shader.vert  shaderCompile.sh
src/: CMakeLists.txt
src/3rdParts/: CMakeLists.txt
src/CSJGLRender/: CSJGLSceneBase.cpp  CSJGLSceneBase.h
src/CSJGLRender/CSJGLPresetScenes/: CSJGLShadowScene.h
src/CSJSceneEditor/: CSJSceneEditorWindow.cpp  CSJSceneEditorWindow.h
src/CSJSceneRuntime/: CSJSceneEngine.cpp  CSJSceneEngine.h  CSJSceneEngineWindow.cc  CSJSceneEngineWindow.h  CSJSceneRuntimeData.cc  CSJSceneRuntimeData.h
src/CSJSceneRuntime/Resource/: CSJAssetManager.cc  CSJAssetManager.h  CSJModelImporter.cpp  CSJModelImporter.h
src/CSJSceneRuntime/Resource/resource_type/components/: mesh_type.h
src/CSJSceneRuntime/core/math/: coordinate_definitions.h
src/CSJSceneRuntime/function/Global/: CSJGlobalContext.h
src/CSJSceneRuntime/function/Input/: CSJInputContext.cc  CSJInputContext.h
src/CSJSceneRuntime/function/framework/Component/: CSJComponent.cpp  CSJComponent.h  MeshComponent.cc  MeshComponent.h  raw_mesh.h
src/CSJSceneRuntime/function/framework/Component/mesh/: MeshComponent.cc  MeshComponent.h  raw_mesh.h
src/CSJSceneRuntime/function/framework/GameLevel/: CSJGameLevel.cc  CSJGameLevel.h
src/CSJSceneRuntime/function/framework/Object/: CSJObject.cc  CSJObject.h  CSJObjectIDAlloc.cc  CSJObjectIDAlloc.h
src/CSJSceneRuntime/function/framework/WorldManager/: CSJGameLevel.cc  CSJGameLevel.h  CSJWorldManager.cc  CSJWorldManager.h
src/CSJSceneRuntime/function/framework/render/: CSJRenderCore.cc  CSJRenderCore.h  CSJRenderEntity.h  CSJRenderGuidManager.h  CSJRenderObjectData.h  CSJRenderPipeline.cc  CSJRenderPipeline.h  CSJRenderResource.cc  CSJRenderResource.h  CSJRenderScene.cc  CSJRenderScene.h  CSJRenderSource.h  RenderObjects.h
src/CSJSceneRuntime/function/global/: CSJRuntimeContext.cc  CSJRuntimeContext.h
src/CSJSceneRuntime/function/render/: render_system.cc  render_system.h
src/Tools/: CSJPathTool.cc  CSJPathTool.h
src/Utils/: CSJLogger.cc  CSJLogger.h  CSJPathTool.cc  CSJPathTool.h  CSJStringTool.cc  CSJStringTool.h
src/main/: main.cpp  mainwindow.cpp  mainwindow.h
